--- a/src/main/webapp/Social.html
+++ b/src/main/webapp/Social.html
@@ -19,8 +19,8 @@
 -->
     <script src="js/controllers.js"></script>
     <div id="container" class="container" ng-hide="showError">
-      <div id="IntroText" class="title" style="margin-left:auto; margin-right:auto;">
-        Tap on any of the icons below to follow us on social networks.
+      <div id="IntroText" class="title" style="text-align: center;">
+        Tap on any of the icons below to follow us on our social networks.
       </div>
       <div ng-repeat="socialNetwork in socialNetworks" id="{{socialNetwork.name}}" class="card" onclick="clickAnimation(this)" ng-click="selectThis(socialNetwork.name)">
         <div id="{{socialNetwork.name}}Logo" class="{{socialNetwork.name}}Logo media inline"></div>
